--- a/index.html
+++ b/index.html
@@ -5,9 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="intro-block">
+        <header class="header">
+            <div class="container">
+                <div class="header-inner">
+                    <a class="logo-link" href="#"><img class="header-logo" src="./img/Logo.png" alt="logo"></a>
+                    <nav class="nav">
+                        <ul>
+                            <li><a class="nav-link" href="#">Contact</a></li>
+                            <li><a class="nav-link" href="#">How it works</a></li>
+                        </ul>
+                    </nav>
+                    <label>
+                        <button class="started-btn">
+                            <img class="btn-icon" src="./img/RocketLaunch.png" alt="">
+                            <span class="btn-txt">Get Started</span>
+                        </button>
+                    </label>
+                </div>
+            </div>
+        </header>
+        <section class="intro">
+            <div class="container">
+                <div class="intro-wrapper">
+                    <div class="intro-info">
+                        <h1 class="intro-title">Create Engaging Landing Pages</h1>
+                        <p class="intro-txt">Build beautiful landing pages in record 
+                            time with Anima’s Landing Page UI kit for Figma. No code required!
+                        </p>
+                        <label>
+                            <button class="started-btn">
+                                <img class="btn-icon" src="./img/RocketLaunch.png" alt="">
+                                <span class="btn-txt">Get Started</span>
+                            </button>
+                            <button class="how-it-work-btn">
+                                <span class="work-btn-txt">How it works</span>
+                            </button>
+                        </label>
+                    </div>
+                    <div class="intro-img"></div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
