--- a/index.html
+++ b/index.html
@@ -55,5 +55,21 @@
             </div>
         </section>
     </div>
+    <main>
+        <section class="logo-bar">
+            <div class="container">
+                <hr>
+                <div class="logo-bar-wrapper">
+                    <img class="logo-bar-item" src="./img/airbnb-logo.png" alt="">
+                    <img class="logo-bar-item" src="./img/google-logo.png" alt="">
+                    <img class="logo-bar-item" src="./img/amazon-logo.png" alt="">
+                    <img class="logo-bar-item" src="./img/microsoft-logo.png" alt="">
+                    <img class="logo-bar-item" src="./img/fedex-logo.png" alt="">
+                    <img class="logo-bar-item" src="./img/hubspot-logo.png" alt="">
+                </div>
+                <hr>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
