--- a/index.html
+++ b/index.html
@@ -70,6 +70,59 @@
                 <hr>
             </div>
         </section>
+        <section class="features">
+            <div class="container">
+                <h2 class="title">Features</h2>
+                <h4 class="subtitle">These are just a few features you’ll get using Anima Landing Page Ui Kit.</h3>
+                <div class="features-wrapper">
+                    <div class="features-item">
+                        <div class="features-item-inner">
+                            <img class="features-item-img" src="./img/magicwand.png" alt="magic-wan">
+                            <h3 class="fetures-item-title">Fast building</h3>
+                            <p class="features-item-txt">
+                                Tailor Anima's Landing Page UI Kit to 
+                                your unique style and brand with 
+                                customisable components, in no time!
+                            </p>
+                            <a class="fetures-item-link" href="#">
+                                Learn more
+                                <img class="arrow-icon" src="./img/ArrowRight.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="features-item">
+                        <div class="features-item-inner">
+                            <img class="features-item-img" src="./img/square.png" alt="square">
+                            <h3 class="fetures-item-title">Responsive Design</h3>
+                            <p class="features-item-txt">
+                                No need to worry about screen size. 
+                                Anima's Landing Page UI Kit adapts to any screen size, 
+                                from desktop to mobile.
+                            </p>
+                            <a class="fetures-item-link" href="#">
+                                Learn more
+                                <img class="arrow-icon" src="./img/ArrowRight.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="features-item">
+                        <div class="features-item-inner">
+                            <img class="features-item-img" src="./img/confetti.png" alt="confetti">
+                            <h3 class="fetures-item-title">No Code Needed</h3>
+                            <p class="features-item-txt">
+                                Zero coding skills required, Anima's Landing 
+                                Page UI Kit empowers you to create stunning 
+                                landing pages with ease.
+                            </p>
+                            <a class="fetures-item-link" href="#">
+                                Learn more 
+                                <img class="arrow-icon" src="./img/ArrowRight.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
