--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
                 </div>
             </div>
         </section>
+        <section class="get-started-block">
+            <div class="container">
+                <div class="get-started-wrapper">
+                    <div class="visual-circle-bg"></div>
+                    <div class="get-started-info">
+                        <div class="get-started-info-inner">    
+                            <h2 class="title get-started-info-title">Get Landing Page UI Kit Today!</h2>
+                            <p class="get-started-info-txt">Break the Figma limits and explore the endless possibilities with Anima.</p>
+                            <button class="get-started-btn">Get started</button>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
