--- a/index.html
+++ b/index.html
@@ -133,7 +133,30 @@
                             <p class="get-started-info-txt">Break the Figma limits and explore the endless possibilities with Anima.</p>
                             <button class="get-started-btn">Get started</button>
                         </div>
-                        
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="metrics-block">
+            <div class="container">
+                <h2 class="title">Our Metrics Tell the Story</h2>
+                <h3 class="subtitle">Our metrics component gives you the inside scoop on your success and helps you stay on top of your game in style.</h3>
+                <div class="metrics-wrapper">
+                    <div class="metrics-item">
+                        <h3 class="metrics-title">10k+</h3>
+                        <h4 class="metrics-subtitle">Website launched</h4>
+                    </div>
+                    <div class="metrics-item">
+                        <h3 class="metrics-title">931k+</h3>
+                        <h4 class="metrics-subtitle">Projects created with Anima</h4>
+                    </div>
+                    <div class="metrics-item">
+                        <h3 class="metrics-title">240k+</h3>
+                        <h4 class="metrics-subtitle">New users joined Anima</h4>
+                    </div>
+                    <div class="metrics-item">
+                        <h3 class="metrics-title">12k+</h3>
+                        <h4 class="metrics-subtitle">Teams used Anima</h4>
                     </div>
                 </div>
             </div>
