--- a/index.html
+++ b/index.html
@@ -221,6 +221,47 @@
                 </div>
             </div>
         </section>
+        <section class="team">
+            <div class="container">
+                <h2 class="title">Meet our team</h2>
+                <h3 class="subtitle">Get to know the faces behind the scenes and learn about the values that drive us.</h3>
+                <div class="team-card-wrapper">
+                    <div class="team-item-card">
+                        <img class="item-card-photo" src="./img/sarah-card-photo.png" alt="">
+                        <h4 class="card-name">Sarah K.</h4>
+                        <h5 class="card-proffesion">UX Designer</h5>
+                        <hr>
+                        <div class="social-icons-wrapper">
+                            <a href="#"><img class="social-icon" src="./img/Social Icons.png" alt=""></a>
+                            <a href="#"></a><img class="social-icon" src="./img/ball-icon.png" alt=""></a>
+                            <a href="#"></a><img class="social-icon" src="./img/instagram-icon.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="team-item-card">
+                        <img class="item-card-photo" src="./img/michael-card-photo.png" alt="">
+                        <h4 class="card-name">Michael L.</h4>
+                        <h5 class="card-proffesion">Lead Designer</h5>
+                        <hr>
+                        <div class="social-icons-wrapper">
+                            <a href="#"><img class="social-icon" src="./img/Social Icons.png" alt=""></a>
+                            <a href="#"></a><img class="social-icon" src="./img/ball-icon.png" alt=""></a>
+                            <a href="#"></a><img class="social-icon" src="./img/instagram-icon.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="team-item-card">
+                        <img class="item-card-photo" src="./img/lauren-card-photo.png" alt="">
+                        <h4 class="card-name">Lauren M.</h4>
+                        <h5 class="card-proffesion">Product Designer</h5>
+                        <hr>
+                        <div class="social-icons-wrapper">
+                            <a href="#"><img class="social-icon" src="./img/Social Icons.png" alt=""></a>
+                            <a href="#"></a><img class="social-icon" src="./img/ball-icon.png" alt=""></a>
+                            <a href="#"></a><img class="social-icon" src="./img/instagram-icon.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
