--- a/index.html
+++ b/index.html
@@ -262,6 +262,25 @@
                 </div>
             </div>
         </section>
+        <section class="start-block">
+            <div class="container">
+                <div class="start-block-item">
+                    <div class="start-block-item-info-inner">
+                        <h2 class="title start-block-title">Get Landing Page UI Kit Today!</h2>
+                        <p class="start-block-item-txt">Break the Figma limits and explore the endless possibilities with Anima.</p>
+                        <div class="start-item-btn-block">
+                            <label>
+                                <button class="start-item-btn">
+                                    Get started
+                                    <img class="start-item-btn-icon" src="./img/ArrowRight-white.png" alt="">
+                                </button>
+                            </label>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
