contact-form-block

--- a/index.html
+++ b/index.html
@@ -283,7 +283,38 @@
         </section>
         <section class="contact-form">
             <div class="container">
-                
+                <div class="contact-block">
+                    <div class="contact-block-inner">
+                        <div class="contact-info">
+                            <h2 class="title contact-info-title">Let’s get in touch!</h2>
+                            <h3 class="subtitle contact-info-subtitle">Got questions about the Landing Page UI Kit? Our team is here to help. Contact us for quick and friendly support.</h3>
+                            <div class="contact">
+                                <img class="contact-icon" src="./img/PhoneCall.png" alt="">
+                                <span class="contact-adress">+012 345 6789</span>
+                            </div>
+                            <div class="contact">
+                                <img class="contact-icon" src="./img/EnvelopeSimple.png" alt="">
+                                <span class="contact-adress">Hello@animaapp.com</span>
+                            </div>
+                            <span class="contact-meseengers-title">Connect with us</span>
+                            <div class="messengers">
+                                <a class="messenger-icon-link" href="#"><img class="contact-messengers-icon" src="./img/instagram-icon.png" alt=""></a>
+                                <a class="messenger-icon-link" href="#"><img class="contact-messengers-icon" src="./img/ball-icon.png" alt=""></a>
+                                <a class="messenger-icon-link" href="#"><img class="contact-messengers-icon" src="./img/Social Icons.png" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="form">
+                            <form>
+                                <label>
+                                    <input required class="name-form" placeholder="Full name" type="text">
+                                    <input required class="name-form" placeholder="Email" type="email">
+                                    <textarea class="your-message" placeholder="Message" name="" id="" cols="30" rows="10"></textarea>
+                                    <button type="submit" class="submit-form-btn">Submit</button>
+                                </label>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
