--- a/index.html
+++ b/index.html
@@ -318,5 +318,18 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-inner">
+                <span class="author">© 2023 Anima’s Landing Page Ui Kit. </span>
+                <div class="social-wrapper">
+                    <a class="footer-social-link" href="#"><img class="footer-social-img" src="./img/footer-youtube-icon.png" alt="Youtube"></a>
+                    <a class="footer-social-link" href="#"><img class="footer-social-img" src="./img/instagram-footer-icon.png" alt="Youtube"></a>
+                    <a class="footer-social-link" href="#"><img class="footer-social-img" src="./img/github-footer-icon.png" alt="Youtube"></a>
+                    <a class="footer-social-link" href="#"><img class="footer-social-img" src="./img/in-footer-icon.png" alt="Youtube"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
