--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <nav class="nav">
                         <ul>
                             <li><a class="nav-link" href="#">Contact</a></li>
-                            <li><a class="nav-link" href="#">How it works</a></li>
+                            <li><a class="nav-link how-it-work" href="#">How it works</a></li>
                         </ul>
                     </nav>
                     <label>
@@ -167,56 +167,68 @@
                 <h3 class="subtitle">See how our landing page ui kit is making an impact.</h3>
                 <div class="stories-item-wrapper">
                     <div class="stories-item">
-                        <img class="stories-item-img" src="./img/sarah.png" alt="">
-                        <h3 class="stories-item-title">Sarah K.</h3>
-                        <h4 class="stories-item-subtitle">UX Designer @Brello</h4>
-                        <p class="stories-item-txt">"I was looking for a way to streamline my design 
-                            process and the Anima’s Landing Page UI Kit was a 
-                            lifesaver! The intuitive design and ease of customisation 
-                            have saved me hours of time and effort. Highly recommend!"
-                        </p>
-                        <div class="star-icons-wrapper">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
+                        <div class="stories-item-info">
+                            <img class="stories-item-img" src="./img/sarah.png" alt="">
+                            <h3 class="stories-item-title">Sarah K.</h3>
+                            <h4 class="stories-item-subtitle">UX Designer @Brello</h4>
+                        </div>
+                        <div>
+                            <p class="stories-item-txt">"I was looking for a way to streamline my design 
+                                process and the Anima’s Landing Page UI Kit was a 
+                                lifesaver! The intuitive design and ease of customisation 
+                                have saved me hours of time and effort. Highly recommend!"
+                            </p>
+                            <div class="star-icons-wrapper">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="stories-item">
-                        <img class="stories-item-img" src="./img/michael.png" alt="">
-                        <h3 class="stories-item-title">Michael L.</h3>
-                        <h4 class="stories-item-subtitle">Creative Director @Yo</h4>
-                        <p class="stories-item-txt">"“The Landing Page UI Kit has been a
-                            game changer for my agency. The pre-designed components and
-                            templates have helped us deliver projects faster and with
-                            more consistency. Great job!"
-                        </p>
-                        <div class="star-icons-wrapper michael">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Vector.png" alt="">
+                        <div class="stories-item-info">   
+                            <img class="stories-item-img" src="./img/michael.png" alt="">
+                            <h3 class="stories-item-title">Michael L.</h3>
+                            <h4 class="stories-item-subtitle">Creative Director @Yo</h4>
                         </div>
+                        <div>
+                            <p class="stories-item-txt">"“The Landing Page UI Kit has been a
+                                game changer for my agency. The pre-designed components and
+                                templates have helped us deliver projects faster and with
+                                more consistency. Great job!"
+                            </p>
+                            <div class="star-icons-wrapper michael">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Vector.png" alt="">
+                            </div>
+                        </div>                       
                     </div>
                     <div class="stories-item">
-                        <img class="stories-item-img" src="./img/lauren.png" alt="">
-                        <h3 class="stories-item-title">Lauren M.</h3>
-                        <h4 class="stories-item-subtitle">UI Designer @Boo</h4>
-                        <p class="stories-item-txt">""Anima’s Landing Page UI Kit has
-                            become a staple in my design toolkit. Whether I'm working
-                            on a new project or need to make updates to an existing
-                            one, this kit has everything I need to get the job done
-                            quickly and efficiently."
-                        </p>
-                        <div class="star-icons-wrapper">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
-                            <img class="star-icon" src="./img/Star Icon.png" alt="">
+                        <div class="stories-item-info">
+                            <img class="stories-item-img" src="./img/lauren.png" alt="">
+                            <h3 class="stories-item-title">Lauren M.</h3>
+                            <h4 class="stories-item-subtitle">UI Designer @Boo</h4>
                         </div>
+                        <div>
+                            <p class="stories-item-txt">""Anima’s Landing Page UI Kit has
+                                become a staple in my design toolkit. Whether I'm working
+                                on a new project or need to make updates to an existing
+                                one, this kit has everything I need to get the job done
+                                quickly and efficiently."
+                            </p>
+                            <div class="star-icons-wrapper">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                                <img class="star-icon" src="./img/Star Icon.png" alt="">
+                            </div>
+                        </div>                    
                     </div>
                 </div>
             </div>
